--- a/views/edit_equipment.html
+++ b/views/edit_equipment.html
@@ -20,6 +20,8 @@
     <link href="lib/advanced-datatable/css/demo_page.css" rel="stylesheet" />
     <link href="lib/advanced-datatable/css/demo_table.css" rel="stylesheet" />
     <link rel="stylesheet" href="lib/advanced-datatable/css/DT_bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="lib/bootstrap-datepicker/css/datepicker.css" />
+
 
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
@@ -64,13 +66,13 @@
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a class="active" href="/viewEng">
+                        <a href="/viewEng">
                             <i class="fa fa-user-md"></i>
                             <span>Engineers</span>
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="/showEq">
+                        <a class="active" href="/showEq">
                             <i class="fa fa-cogs"></i>
                             <span>Equipments</span>
                         </a>
@@ -134,6 +136,7 @@
                             <li><a href="/showWorkOrdersForm">Add Work Order Report</a></li>
                         </ul>
                     </li>
+
                 </ul>
                 <!-- sidebar menu end-->
             </div>
@@ -145,24 +148,83 @@
         <!--main content start-->
         <section id="main-content">
             <section class="wrapper">
-                <h3><i class="fa fa-angle-right"></i> Add A New Engineer</h3>
+                <h3><i class="fa fa-angle-right"></i> Edit Equipment</h3>
 
                 <!-- /row -->
                 <div class="row mt">
                     <div class="col-lg-12">
                         <div class="form-panel">
                             <div class="form">
-                                <form class="cmxform form-horizontal style-form" id="signupForm" method="Post" action="/addEng">
+                                <form class="cmxform form-horizontal style-form" id="signupForm" method="POST" action="/editEq">
+
                                     <div class="form-group">
-                                        <label for="firstname" class="control-label col-lg-2">First Name</label>
+                                        <label for="name" class="control-label col-lg-2">Name</label>
                                         <div class="col-lg-10">
-                                            <input class=" form-control" id="firstname" name="firstname" type="text" required/>
+                                            <input class=" form-control" id="name" name="name" type="text" required/>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="lastname" class="control-label col-lg-2">Last Name</label>
+                                        <label for="ventor" class="control-label col-lg-2">Ventor</label>
                                         <div class="col-lg-10">
-                                            <input class=" form-control" id="lastname" name="lastname" type="text" required/>
+                                            <input class=" form-control" id="name" name="ventor" type="text" required/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="prevenmain" class="control-label col-lg-2">Preventive Maintianance</label>
+                                        <div class="col-lg-10">
+                                            <input class=" form-control" id="name" name="preven" type="text" required/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="freq" class="control-label col-lg-2">Frequance</label>
+                                        <div class="col-lg-10">
+                                            <input class=" form-control" id="name" name="freq" type="text" required/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="operation" class="control-label col-lg-2">Operation</label>
+                                        <div class="col-lg-10">
+                                            <input class=" form-control" id="name" name="operation" type="text" required/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="cost" class="control-label col-lg-2">Cost</label>
+                                        <div class="col-lg-10">
+                                            <input class=" form-control" id="name" name="cost" type="number" required/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="warrantyperiod" class="control-label col-lg-2">Warranty Period</label>
+                                        <div class="col-lg-10">
+                                            <input class=" form-control" id="name" name="warrantyperiod" type="text" required/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="model" class="control-label col-lg-2">Model</label>
+
+                                        <div class="col-lg-10">
+                                            <input class=" form-control" name="model" type="text" required/>
+                                        </div>
+
+
+                                    </div>
+                                    <!--                                    </div>-->
+                                    <div class="form-group">
+                                        <label for="serial" class="control-label col-lg-2">Serial Number</label>
+                                        <div class="col-lg-10">
+                                            <input class="form-control" id="serial" name="serial" type="number" required />
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="maintainDate" class="control-label col-lg-2">Maintainance Date</label>
+                                        <div class="col-lg-3">
+                                            <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" data-date="01-01-2014" class="input-append date dpYears">
+                                                <input type="text" readonly="" id="maintainDate" name="maintainDate" size="16" class="form-control" required>
+                                                <span class="input-group-btn add-on">
+                            <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
+                            </span>
+                                            </div>
+                                            <span class="help-block">Select date</span>
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -172,33 +234,14 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="salary" class="control-label col-lg-2">Salary</label>
-                                        <div class="col-lg-10">
-                                            <input class="form-control" id="salary" name="salary" type="number" required />
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="email" class="control-label col-lg-2">Email</label>
-                                        <div class="col-lg-10">
-                                            <input class="form-control" id="email" name="email" type="email" required />
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="password" class="control-label col-lg-2">Password</label>
-                                        <div class="col-lg-10">
-                                            <input class="form-control" id="password" name="password" type="password" required/>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
                                         <div class="col-lg-offset-2 col-lg-10">
-                                            <button class="btn btn-theme" href="/viewEng" type="submit">Add</button>
-                                            <a class="btn btn-theme04" type="button" href="/viewEng">Cancel</a>
+                                            <button class="btn btn-theme" href="/showEq" type="submit">Save</button>
+                                            <a class="btn btn-theme04" type="button" href="/showEq">Cancel</a>
                                         </div>
                                     </div>
                                 </form>
                             </div>
-                        </div>
+                        </div>editEq
                         <!-- /form-panel -->
                     </div>
                     <!-- /col-lg-12 -->
@@ -223,6 +266,9 @@
     <script src="lib/common-scripts.js"></script>
     <!--script for this page-->
     <script src="lib/form-validation-script.js"></script>
+    <script type="text/javascript" src="lib/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
+    <script type="text/javascript" src="lib/bootstrap-daterangepicker/date.js"></script>
+    <script src="lib/advanced-form-components.js"></script>
 
 </body>
 
