--- a/views/add_equipment.html
+++ b/views/add_equipment.html
@@ -239,7 +239,7 @@
                                     </div>
                                     <div class="form-group">
                                         <div class="col-lg-offset-2 col-lg-10">
-                                            <button class="btn btn-theme" type="submit">Add</button>
+                                            <button class="btn btn-theme" href="/showEqform" type="submit">Add</button>
                                             <a class="btn btn-theme04" type="button" href="/showEqform">Cancel</a>
                                         </div>
                                     </div>
