--- a/views/management.html
+++ b/views/management.html
@@ -56,7 +56,7 @@
             <div id="sidebar" class="nav-collapse">
                 <!-- sidebar menu start-->
                 <ul class="sidebar-menu" id="nav-accordion">
-                    <li class="mt">
+                    <li class="sub-menu">
                         <a class="active" href="/managementSystem">
                             <i class="fa fa-medkit"></i>
                             <span>Dashboard</span>
@@ -226,7 +226,7 @@
                                     <div class="darkblue-header">
                                         <h5>SITE STATICS</h5>
                                     </div>
-                                    <h1 class="mt"><i class="fa fa-user fa-3x"></i></h1>
+                                    <h1 class="sub-menu"><i class="fa fa-user fa-3x"></i></h1>
                                     <p>+89 NEW VISITS</p>
                                     <footer>
                                         <div class="centered">
