--- a/views/home/engineers.handlebars
+++ b/views/home/engineers.handlebars
@@ -57,7 +57,7 @@
             <div id="sidebar" class="nav-collapse">
                 <!-- sidebar menu start-->
                 <ul class="sidebar-menu" id="nav-accordion">
-                    <li class="mt">
+                    <li class="sub-menu">
                         <a href="/managementSystem">
                             <i class="fa fa-medkit"></i>
                             <span>Dashboard</span>
