--- a/views/add_preinstallation.html
+++ b/views/add_preinstallation.html
@@ -90,35 +90,35 @@
                         <ul style="padding-left: 0;">
                             <li class="sub-menu">
                                 <a href="javascript:;">
-                                    <span>X</span>
+                                    <span>Surgery</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationformX">Pre-installation Reports</a></li>
-                                    <li><a href="/showDailyInspectionX">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingX">Inventory Listing Reports</a></li>
-                                    <li><a href="/showWorkOrdersX">Work Order Reports</a></li>
+                                    <li><a href="/showPre-installationSurgery">Pre-installation Reports</a></li>
+                                    <li><a href="/showDailyInspectionSurgery">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingSurgery">Inventory Listing Reports</a></li>
+                                    <li><a href="/showWorkOrdersSurgery">Work Order Reports</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
                                 <a href="javascript:;">
-                                    <span>Y</span>
+                                    <span>Emergency</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationY">Pre-installation Reports</a></li>
-                                    <li><a href="/showDailyInspectionY">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingY">Inventory Listing Reports</a></li>
-                                    <li><a href="/showWorkOrdersY">Work Order Reports</a></li>
+                                    <li><a href="/showPre-installationEmergency">Pre-installation Reports</a></li>
+                                    <li><a href="/showDailyInspectionEmergency">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingEmergency">Inventory Listing Reports</a></li>
+                                    <li><a href="/showWorkOrdersEmergency">Work Order Reports</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
                                 <a href="javascript:;">
-                                    <span>Z</span>
+                                    <span>Catheterization</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationZ">Pre-installation Reports</a></li>
-                                    <li><a href="/showDailyInspectionZ">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingZ">Inventory Listing Reports</a></li>
-                                    <li><a href="/showWorkOrdersZ">Work Order Reports</a></li>
+                                    <li><a href="/showPre-installationCatheter">Pre-installation Reports</a></li>
+                                    <li><a href="/showDailyInspectionCatheter">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingCatheter">Inventory Listing Reports</a></li>
+                                    <li><a href="/showWorkOrdersCatheter">Work Order Reports</a></li>
                                 </ul>
                             </li>
                         </ul>
