--- a/views/add_preinstallation.html
+++ b/views/add_preinstallation.html
@@ -197,19 +197,21 @@
                                                 <td>Pre-Installation Form Copied</td>
                                                 <td>
                                                     <div class="form-group" style="margin-left: 5px!important;">
-                                                        <input type="checkbox" style="width: 20px" class="checkbox form-control" id="preinstallCheck" name="preinstallCheck"></td>
+                                                        <input type="checkbox" style="width: 20px" class="checkbox form-control"  name="preinstallCheck">
                                                 </div>
+                                                </td>
+
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
-                                                            <input class=" form-control" id="preinstallRON" name="preinstallRON" placeholder="Enter The Name" type="text" />
+                                                            <input class=" form-control"  name="preinstallRON" placeholder="Enter The Name" type="text" />
                                                         </div>
                                                     </div>
                                                 </td>
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
-                                                            <input class=" form-control" id="preinstallComment" name="preinstallComment" placeholder="Enter Any Comments" type="text" />
+                                                            <input class=" form-control"  name="preinstallComment" placeholder="Enter Any Comments" type="text" />
                                                         </div>
                                                     </div>
                                                 </td>
